<resources>
    <string name="app_name">iPing</string>
    <string name="title_activity_detail">Details</string>
    <string name="add_new_host">Add new host</string>
    <string name="ip_address_hint">IP address</string>
    <string name="host_title">Title</string>
    <string name="action_save">Save</string>
    <string name="host_edit">Edit host</string>
    <string name="ping_timeout">Ping timeout (ms)</string>
    <string name="ping_frequency">Ping frequency (ms)</string>
    <string name="wrong_ip_address">Wrong ip address format</string>
    <string name="host_already_exist">Host already exist</string>
    <string name="frequency_must_be_more_hundred_ms">Frequency must be at least 100 ms</string>
    <string name="timeout_must_be_more_one_second">Timeout must be at least one second</string>
    <string name="something_went_wrong">Something went wrong. Try again</string>
    <string name="ping_command_failed">Ping command failed</string>
    <string name="unable_to_execute_ping_command">Unable to execute ping command</string>
    <string name="unexpected_ping_error">Unexpected ping error</string>
    <string name="current_ping_format" formatted="false">%s ms</string>
    <string name="chart_legend">Ping (ms)</string>
    <string name="chart_values_count" formatted="true">Last %d values</string>
    <string name="app_source">App source</string>
    <string name="network_tools_source">Android network tools</string>
    <string name="mp_chart_source">MP android chart</string>
    <string name="unable_to_open_link">Unable resolve app to open web link</string>

    <string name="app_source_link" translatable="false">https://github.com/XIII-th/ping</string>
    <string name="network_tools_source_link" translatable="false">https://github.com/stealthcopter/AndroidNetworkTools</string>
    <string name="mp_chart_source_link" translatable="false">https://github.com/PhilJay/MPAndroidChart</string>
    <string name="add_new_host_to_start">Add host to start monitoring</string>
    <string name="select_host">Select one host to view chart</string>
</resources>
