<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:icon="@drawable/github_circle"
            android:title="@string/app_source"
            app:showAsAction="always">
        <menu>
            <item
                    android:id="@+id/app_source"
                    android:title="@string/app_source"
                    android:onClick="onOpenSourceLinkClicked"/>
            <item
                    android:id="@+id/network_tools_source"
                    android:title="@string/network_tools_source"
                    android:onClick="onOpenSourceLinkClicked"/>
            <item
                    android:id="@+id/mp_chart_source"
                    android:title="@string/mp_chart_source"
                    android:onClick="onOpenSourceLinkClicked"/>
        </menu>
    </item>
</menu>