<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="editVm"
                type="com.xiiilab.ping.viewmodel.edit.EditViewModel"/>
    </data>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:hint="@string/ip_address_hint"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/ip_v4_max_length"
                app:error="@{editVm.ipError}">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage"
                    android:maxLength="@integer/ip_v4_max_length"
                    android:text="@={editVm.entity.host}"
                    android:enabled="@{safeUnbox(editVm.newEntity)}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/host_title"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/host_title_max_length">

            <!--TODO: set default focus in edit mode-->

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage"
                    android:maxLength="@integer/host_title_max_length"
                    android:text="@={editVm.entity.title}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ping_frequency"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/timeout_number_length"
                app:error="@{editVm.frequencyError}">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={editVm.entity.frequency}"
                    android:inputType="number"
                    android:maxLength="@integer/timeout_number_length"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ping_timeout"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/timeout_number_length"
                app:error="@{editVm.timeoutError}">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={editVm.entity.timeout}"
                    android:inputType="number"
                    android:maxLength="@integer/timeout_number_length"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</layout>